fix z-index

--- a/style/styles.css
+++ b/style/styles.css
@@ -114,7 +114,7 @@ button:hover {
   height: 15%;
   background-color: rgba(240, 240, 240, 0.75);
   display: flex;
-  z-index: 99;
+  z-index: 1;
 }
 
 .slider {
@@ -135,6 +135,11 @@ button:hover {
   border-radius: 50px;
   background-color: white;
   opacity: 0.85;
+}
+
+.left-button,
+.right-button {
+  z-index: 2;
 }
 
 .left-button {
